{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 90,
  "lineage": "99d2c152-db36-0fd8-7d54-d700f02163ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Amazonet2micro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fd05997b4dff7aac",
            "arn": "arn:aws:ec2:ap-south-1:842134795352:instance/i-09e939fcd82bad1a5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e939fcd82bad1a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Lap-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00956a24527188417",
            "private_dns": "ip-10-8-1-16.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.1.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ee851fb047d32124",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7b4237ea3f78eef",
            "tags": {
              "Name": "Amazon Instance"
            },
            "tags_all": {
              "Name": "Amazon Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090a3f51a211fea0d"
            ]
          },
          "dependencies": [
            "aws_security_group.microsg",
            "aws_subnet.micosubnet",
            "aws_vpc.microvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "microgtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842134795352:internet-gateway/igw-02f36ceeefadb7b6e",
            "id": "igw-02f36ceeefadb7b6e",
            "owner_id": "842134795352",
            "tags": {
              "Name": "gtw-for-micro"
            },
            "tags_all": {
              "Name": "gtw-for-micro"
            },
            "vpc_id": "vpc-0358ad2d843764676"
          },
          "dependencies": [
            "aws_vpc.microvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "micro_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842134795352:route-table/rtb-013c8620fb6dafd24",
            "id": "rtb-013c8620fb6dafd24",
            "owner_id": "842134795352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f36ceeefadb7b6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-for-micro"
            },
            "tags_all": {
              "Name": "rt-for-micro"
            },
            "timeouts": null,
            "vpc_id": "vpc-0358ad2d843764676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.microgtw",
            "aws_vpc.microvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "micro_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ade5d984bdc27ab6",
            "route_table_id": "rtb-013c8620fb6dafd24",
            "subnet_id": "subnet-0d7b4237ea3f78eef"
          },
          "dependencies": [
            "aws_internet_gateway.microgtw",
            "aws_route_table.micro_rt",
            "aws_subnet.micosubnet",
            "aws_vpc.microvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "microsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842134795352:security-group/sg-090a3f51a211fea0d",
            "description": "HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090a3f51a211fea0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "microsg",
            "name_prefix": "",
            "owner_id": "842134795352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0358ad2d843764676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.microvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "micosubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842134795352:subnet/subnet-0d7b4237ea3f78eef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.8.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7b4237ea3f78eef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842134795352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-for-micro"
            },
            "tags_all": {
              "Name": "subnet-for-micro"
            },
            "vpc_id": "vpc-0358ad2d843764676"
          },
          "dependencies": [
            "aws_vpc.microvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "microvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842134795352:vpc/vpc-0358ad2d843764676",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.0.0/16",
            "default_network_acl_id": "acl-00c2192a769d3f285",
            "default_route_table_id": "rtb-045c16fcd33705ad9",
            "default_security_group_id": "sg-0446d3c01316f4578",
            "dhcp_options_id": "dopt-00fba57085a29b16d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0358ad2d843764676",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045c16fcd33705ad9",
            "owner_id": "842134795352",
            "tags": {
              "Name": "vpc-for-micro"
            },
            "tags_all": {
              "Name": "vpc-for-micro"
            }
          }
        }
      ]
    }
  ]
}